app/assets/stylesheets/components/management/c-widgets-modal.scss
.c-widgets-modal {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 100%;

  > .content {
    flex-basis: 100%;
    flex-grow: 1;
    padding: 45px 45px 0;
    overflow: auto;

    h1 {
      margin: 0 0 20px;
      font-size: $font-size-huge;
      font-weight: $font-weight-light;
      text-align: center;
    }
  }

  .no-data {
    display: block;
    width: 100%;
    margin-top: 60px;
    text-align: center;
  }

  .widgets-list {
    display: flex;
    flex-wrap: wrap;
    align-items: stretch;
    justify-content: flex-start;

    .widget {
      position: relative;
      flex-basis: calc((100% / 3) - ((2 * 20px) / 3));
      margin: 25px 10px;

      label {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        cursor: pointer;
        z-index: 2;
      }

      input {
        position: absolute;
        left: -10000px;

        &:checked + .content .graph {
          &::before {
            opacity: 1;
          }
        }
      }

      h3 {
        margin: 17px 0 6px;
        font-size: $font-size-normal;
        text-transform: uppercase;
      }

      p {
        margin: 0;
        font-size: $font-size-small;
        line-height: 1.4;
      }

      .graph {
        position: relative;
        width: 100%;
        height: 160px;
        padding: 10px;
        border: 1px solid $color-7;
        border-radius: 4px;

        &::before {
          display: block;
          position: absolute;
          top: 0;
          left: 0;
          width: 100%;
          height: 100%;
          transition: opacity .3s;
          background: asset-url('icons/large-check-icon.svg') no-repeat center center, rgba($color-1, .8);
          content: '';
          opacity: 0;
          z-index: 1;
        }

        > .c-chart-widget {
          width: 100%;
        }
      }
    }
  }
}

